--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FakeStore</title>
+  <title>Shopper Delight Store</title>
   <link rel="stylesheet" href="./css/style.css" />
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -16,24 +16,23 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
 </head>
-
 <body>
   <header></header>
-  <main class="main">
-    <div class="search-field">
-      <div class="search-box">
-        <input id="input-field" class="search-field" type="text" />
-        <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
-          autocomplete="off" id="search-btn" onclick="loadProducts()">
-          Search
-        </button>
-      </div>
-    </div>
+  <main class="main container">
+    <h2>Shopper's Delight Store</h2>
+    <!-- search field -->
+   <div class="search-box">
+  <input type="text" class="search-input"  placeholder="Search product" aria-label="Recipient's username" aria-describedby="button-addon2">
+  <button onclick="searchProduct()" type="button" id="search-btn">search</button>
+</div>
+
+<!-- cards -->
     <div class="row">
-      <div class="col-md-9 col-lg-9 col-sm-7">
+      <div class="col-md-9 col-lg-9 col-sm-7 g-4">
         <div id="all-products" class="">
         </div>
       </div>
+      <!-- add to cart table -->
       <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
         <div class="cart" id="my-cart">
           <table class="table">
@@ -86,7 +85,6 @@
     </div>
   </main>
   <footer></footer>
-
   <!-- add javascript  file  -->
   <script src="./js/app.js"></script>
 </body>
