--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <header></header>
+  <header>
+  </header>
   <main class="main container">
     <h2>Shopper's Delight Store</h2>
     <!-- search field -->
@@ -25,7 +26,6 @@
   <input type="text" class="search-input"  placeholder="Search product" aria-label="Recipient's username" aria-describedby="button-addon2">
   <button onclick="searchProduct()" type="button" id="search-btn">search</button>
 </div>
-
 <!-- cards -->
     <div class="row">
       <div class="col-md-9 col-lg-9 col-sm-7 g-4">
